--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,20 @@
+* {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 body {
+  /*max-width: 1440px;*/
   font-family: "Roboto", sans-serif;
   color: #434455;
   background-color: #ffffff;
@@ -6,14 +22,34 @@ body {
 
 a {
   text-decoration: none;
+  color: currentColor;
 }
 
 ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
   list-style: none;
 }
 
 button {
   cursor: pointer;
+}
+
+address {
+  font-style: normal;
+}
+
+.container {
+  max-width: 1158px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.main .container {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .logo {
@@ -32,12 +68,23 @@ button {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.team .subtitle,
+.portfolio .subtitle {
+  padding-top: 32px;
 }
 
 .body-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+
+.team .body-text,
+.portfolio .body-text {
+  padding-bottom: 32px;
 }
 
 .title {
@@ -48,6 +95,7 @@ button {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 
 .link {
@@ -59,6 +107,8 @@ button {
 /*=============Header========*/
 
 .header {
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .header-nav {
@@ -114,13 +164,19 @@ button {
 .hero {
   background: #2e2f42;
   color: #fff;
+  text-align: center;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
+
 .hero-title {
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  text-align: center;
+  max-width: 496px;
+  margin: 0 auto;
+  padding-bottom: 48px;
 }
 
 .hero-btn {
@@ -194,6 +250,12 @@ button {
   background: #2e2f42;
 }
 
+.footer .container {
+  margin-left: 156px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
 .footer span {
   color: #f4f4fd;
 }
@@ -203,6 +265,8 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  padding-top: 16px;
+  max-width: 264px;
 }
 
 /*===========================*/
