--- a/css/style.css
+++ b/css/style.css
@@ -46,10 +46,11 @@ img {
 
 .container {
   max-width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
+  /*padding-left: 15px;
+  padding-right: 15px;*/
   margin-left: auto;
   margin-right: auto;
+  padding: 0 15px;
 }
 
 .main .container {
@@ -128,8 +129,9 @@ img {
 
 .header-flex {
   display: flex;
+  padding: 24px 0; /*
   padding-top: 24px;
-  padding-bottom: 24px;
+  padding-bottom: 24px;*/
 }
 
 .header {
